fixing spacing home page

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -15,7 +15,6 @@ body {
 
 }
 
-
 .body-pe {
     padding: 50px;
 }
@@ -134,8 +133,11 @@ a {
 
 /* projects and experiences section */
 
+.pe-section {
+    padding-top: 150px;
+}
+
 .projects-and-experiences {
-    margin-top: 20%;
     display: flex;
     flex-direction: row;
     justify-content: center;
